kubernetes.yaml
# Basic cluster set-up with no auto-scaling to keep cost down.
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-server
  name: api-service
  annotations:
    cloud.google.com/backend-config: '{
      "ports": { "ws-port":"ws-backend-config" }
    }'
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http-port
  - port: 3001
    protocol: TCP
    targetPort: 3001
    name: ws-port
  selector:
    app: api-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spa-server
  name: spa-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spa-server
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - image: eu.gcr.io/yslow1/api-server
        name: api-server
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spa-server
  name: spa-server
spec:
  selector:
    matchLabels:
      app: spa-server
  template:
    metadata:
      labels:
        app: spa-server
    spec:
      containers:
      - image: eu.gcr.io/yslow1/spa-server
        name: spa-server
        imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: yslow-static-ip-prod-1
    networking.gke.io/managed-certificates: production-certificate-1
spec:
  backend:
    serviceName: spa-service
    servicePort: 80
  rules:
  - host: yslow.io
    http:
      paths:
      - backend:
          serviceName: spa-service
          servicePort: 80
  - host: api.yslow.io
    http:
      paths:
      - backend:
          serviceName: api-service
          servicePort: 3000
  - host: wss.yslow.io
    http:
      paths:
      - backend:
          serviceName: api-service
          servicePort: 3001
